--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@avail-project/nexus-core": "^0.0.1",
     "@tailwindcss/vite": "^4.1.15",
     "buffer": "^6.0.3",
+    "ethers": "^6.16.0",
     "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
